<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android Security Suite</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="dump">Andro Dump</string>
    <string name="crafter">Packet Crafter</string>
    <string name="arp">ARP Spoofer</string>
    <string name="dns">DNS Spoofer</string>
    <string name="nmap">Net Scan</string>
    <string name="title_activity_andro_dump">AndroDumpActivity</string>
    <string name="title_activity_packet_crafter">PacketCrafterActivity</string>
    <string name="title_activity_arpspoofer">ARPSpooferActivity</string>
    <string name="title_activity_dnsspoofer">DNSSpooferActivity</string>
    <string name="android_security_suite">ANDROID SECURITY SUITE</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="title_activity_packet_details">PacketDetailsActivity</string>
    <string name="scan">Scan</string>
    <string name="select_the_router_device">Select the Router</string>
    <string name="select_target_device">Select the Target machine</string>
    <string name="spoof">Spoof</string>
    <string name="ip_address_">"IP Address: "</string>
    <string name="interface_">"Network Interface: "</string>
    <string name="medium_text">Medium Text</string>
    <string name="stop_spoofing">Stop Spoofing</string>
    <string name="textview">TextView</string>

</resources>
