<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android_security_suite.MainActivity" >

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:gravity="center_horizontal"
        android:text="@string/android_security_suite"
        android:textSize="24dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/crafter"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:onClick="startPacketCrafterActivity"
        android:text="@string/crafter" />

    <Button
        android:id="@+id/dns"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_above="@+id/crafter"
        android:onClick="startDNSSpooferActivity"
        android:text="@string/dns" />

    <Button
        android:id="@+id/arp"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_above="@+id/dns"
        android:onClick="startARPSpooferActivity"
        android:text="@string/arp" />

    <Button
        android:id="@+id/androdump"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_above="@+id/arp"
        android:onClick="startAndroDumpActivity"
        android:text="@string/dump" />

    <Button
        android:id="@+id/nmap"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_above="@+id/androdump"
        android:text="@string/nmap"
        android:visibility="gone" />

    <TextView
        android:id="@+id/ip_address_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/androdump"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="39dp"
        android:text="@string/ip_address_"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/Interface_name_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ip_address_main"
        android:layout_marginBottom="39dp"
        android:text="@string/interface_"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>